--- a/package.json
+++ b/package.json
@@ -1,43 +1,76 @@
 {
-  "name": "art_museum",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+   "name": "art_museum",
+   "version": "0.1.0",
+   "private": true,
+   "type": "module",
+   "dependencies": {
+      "@eslint/js": "^9.12.0",
+      "@reduxjs/toolkit": "^2.2.8",
+      "@testing-library/jest-dom": "^5.14.1",
+      "@testing-library/react": "^13.0.0",
+      "@testing-library/user-event": "^13.2.1",
+      "@types/jest": "^27.0.1",
+      "@types/node": "^16.7.13",
+      "@types/react": "^18.0.0",
+      "@types/react-dom": "^18.0.0",
+      "eslint-plugin-react-hooks": "^5.0.0",
+      "eslint-plugin-react-refresh": "^0.4.12",
+      "husky": "^9.1.6",
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1",
+      "react-redux": "^9.1.2",
+      "react-router-dom": "^6.26.2",
+      "react-scripts": "5.0.1",
+      "redux": "^5.0.1",
+      "styled-components": "^6.1.13",
+      "typescript": "^4.4.2",
+      "web-vitals": "^2.1.0"
+   },
+   "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject",
+      "lent": "eslint --fix src",
+      "format": "prettier --write .",
+      "prepare": "husky"
+   },
+   "lint-staged": {
+      "*.{js,css,ts,tsx,jsx}": [
+         "yarn prettier --write",
+         "yarn lent"
+      ]
+   },
+   "eslintConfig": {
+      "extends": [
+         "react-app",
+         "react-app/jest"
+      ]
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   },
+   "devDependencies": {
+      "eslint": "^9.12.0",
+      "eslint-config-prettier": "^9.1.0",
+      "eslint-config-react-app": "^7.0.1",
+      "eslint-plugin-prettier": "^5.2.1",
+      "eslint-plugin-react": "^7.37.1",
+      "globals": "^15.11.0",
+      "prettier": "3.3.3",
+      "typescript-eslint": "^8.8.1"
+   },
+   "main": "index.tsx",
+   "author": "Ivan Levchuk <ivanlev011287@gmail.com>",
+   "license": "MIT",
+   "repository": "https://github.com/art_museum/src"
 }
