--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "@types/node": "^16.7.13",
       "@types/react": "^18.0.0",
       "@types/react-dom": "^18.0.0",
+      "axios": "^1.7.7",
       "eslint-plugin-react-hooks": "^5.0.0",
       "eslint-plugin-react-refresh": "^0.4.12",
       "husky": "^9.1.6",
