--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
    "dependencies": {
       "@eslint/js": "^9.12.0",
       "@reduxjs/toolkit": "^2.2.8",
-      "@testing-library/jest-dom": "^5.14.1",
-      "@testing-library/react": "^13.0.0",
+      "@testing-library/dom": "^10.4.0",
+      "@testing-library/jest-dom": "^6.6.2",
+      "@testing-library/react": "^16.0.1",
       "@testing-library/user-event": "^13.2.1",
       "@types/jest": "^27.0.1",
-      "@types/node": "^16.7.13",
-      "@types/react": "^18.0.0",
-      "@types/react-dom": "^18.0.0",
+      "@types/react-dom": "^18.3.1",
       "axios": "^1.7.7",
+      "dotenv-webpack": "^8.1.0",
       "eslint-plugin-react-hooks": "^5.0.0",
       "eslint-plugin-react-refresh": "^0.4.12",
       "husky": "^9.1.6",
@@ -25,7 +25,8 @@
       "react-scripts": "5.0.1",
       "redux": "^5.0.1",
       "styled-components": "^6.1.13",
-      "typescript": "^4.4.2",
+      "tsconfig-paths-webpack-plugin": "^4.1.0",
+      "typescript": "^5.6.3",
       "web-vitals": "^2.1.0"
    },
    "scripts": {
@@ -62,6 +63,8 @@
       ]
    },
    "devDependencies": {
+      "@webpack-cli/generators": "^3.0.7",
+      "css-loader": "^7.1.2",
       "eslint": "^9.12.0",
       "eslint-config-prettier": "^9.1.0",
       "eslint-config-react-app": "^7.0.1",
@@ -69,7 +72,11 @@
       "eslint-plugin-react": "^7.37.1",
       "globals": "^15.11.0",
       "prettier": "3.3.3",
-      "typescript-eslint": "^8.8.1"
+      "style-loader": "^4.0.0",
+      "stylus": "^0.63.0",
+      "stylus-loader": "^8.1.1",
+      "typescript-eslint": "^8.8.1",
+      "webpack": "^5.95.0"
    },
    "main": "index.tsx",
    "author": "Ivan Levchuk <ivanlev011287@gmail.com>",
