--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
+   "homepage": "https://ivan-ushka.github.io/",
    "name": "art_museum",
    "version": "0.1.0",
    "private": true,
    "type": "module",
    "dependencies": {
+      "@craco/craco": "^7.1.0",
       "@eslint/js": "^9.12.0",
-      "@reduxjs/toolkit": "^2.2.8",
       "@testing-library/dom": "^10.4.0",
       "@testing-library/jest-dom": "^6.6.2",
       "@testing-library/react": "^16.0.1",
@@ -16,27 +17,27 @@
       "dotenv-webpack": "^8.1.0",
       "eslint-plugin-react-hooks": "^5.0.0",
       "eslint-plugin-react-refresh": "^0.4.12",
+      "gh-pages": "^6.2.0",
       "husky": "^9.1.6",
       "react": "^18.3.1",
       "react-dom": "^18.3.1",
       "react-hook-form": "^7.53.0",
-      "react-redux": "^9.1.2",
       "react-router-dom": "^6.26.2",
       "react-scripts": "5.0.1",
-      "redux": "^5.0.1",
       "styled-components": "^6.1.13",
       "tsconfig-paths-webpack-plugin": "^4.1.0",
       "typescript": "^5.6.3",
       "web-vitals": "^2.1.0"
    },
    "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
+      "start": "craco start",
+      "build": "craco build",
+      "test": "craco test",
       "eject": "react-scripts eject",
       "lent": "eslint --fix src",
       "format": "prettier --write .",
-      "prepare": "husky"
+      "prepare": "husky",
+      "deploy": "gh-pages -d build"
    },
    "lint-staged": {
       "*.{js,css,ts,tsx,jsx}": [
@@ -64,17 +65,17 @@
    },
    "devDependencies": {
       "@webpack-cli/generators": "^3.0.7",
+      "craco-alias": "^3.0.1",
       "css-loader": "^7.1.2",
-      "eslint": "^9.12.0",
+      "eslint": "^9.13.0",
       "eslint-config-prettier": "^9.1.0",
       "eslint-config-react-app": "^7.0.1",
       "eslint-plugin-prettier": "^5.2.1",
       "eslint-plugin-react": "^7.37.1",
+      "eslint-plugin-simple-import-sort": "^12.1.1",
       "globals": "^15.11.0",
       "prettier": "3.3.3",
-      "style-loader": "^4.0.0",
-      "stylus": "^0.63.0",
-      "stylus-loader": "^8.1.1",
+      "sass": "^1.80.4",
       "typescript-eslint": "^8.8.1",
       "webpack": "^5.95.0"
    },
